--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -168,6 +168,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\ListFolders.cshtml" />
     <Content Include="Views\_ViewImports.cshtml" />
+    <Content Include="Views\Home\ListFiles.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
